plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'es.deusto.sd.auctions'
version = '1.0'

repositories {
	mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {
	// Spring Boot Starter Web for building web applications
    implementation 'org.springframework.boot:spring-boot-starter-web'

	// SpringDoc OpenAPI UI Dependency this is needed to use Swagger annotations
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'
    
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'	
    
    runtimeOnly 'com.h2database:h2'
}